deployment/helm-kustomize/environments/account3/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capwiki-ingress
spec:
  rules:
  - host: account3-capwiki.corp.capgemini.com
    http:
      paths:
      - backend:
          service:
            name: capwiki-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - account3-capwiki.corp.capgemini.com
    secretName: account-capwiki-internal-tls
